# cawnex

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  INCREMENTO-REVIEWER.md  README.md  SELF-BUILDING-TASK-1.md  alembic.ini  docker-compose.yml  handler.py  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.github/actions/setup-infra/: action.yml
.github/workflows/: 0-quality-gate.yml  1-deploy-dev.yml  2-deploy-staging-prod.yml  3-ios-ci.yml  4-ios-release.yml  5-update-ios-config.yml  6-destroy-stacks.yml  7-ci.yml  8-deploy-dev-legacy.yml  9-poc3-deploy.yml  deploy-dev-complete.yml  deploy-dev-legacy.yml  deploy-dev.yml  deploy.yml  destroy-stacks.yml  main-pipeline.yml  poc1-deploy.yml  poc3-deploy.yml  poc5-deploy.yml  poc6-deploy.yml  setup-quality-hooks.yml  update-ios-config.yml  utilities.yml
.github/workflows/disabled/: 0-quality-gate.yml  1-deploy-dev.yml  setup-quality-hooks.yml
_archive/: docker-compose.yml
_archive/alembic/versions/: 1acb46c1a502_initial_schema.py
_archive/apps/web/: pnpm-lock.yaml
_archive/apps/web/src/lib/: api.ts
_archive/apps/web/src/pages/: ProjectList.tsx
_archive/apps/web/src/roost/: Executions.tsx  Overview.tsx
alembic/: env.py
alembic/versions/: 1acb46c1a502_initial_schema.py  e3818561e7c5_add_projects_vision_milestones.py
apps/api/: .gitignore  .pre-commit-config.yaml  Makefile  bandit-report.json  handler.py  pyproject.toml  requirements.txt
apps/api/src/: __init__.py  main.py
apps/api/src/auth/: __init__.py  dependencies.py  tenant.py
apps/api/src/cawnex_api/: __init__.py  app.py  config.py
apps/api/src/cawnex_api/routers/: agents.py  milestones.py  repos.py  tasks.py  tenants.py  vision.py  webhooks.py  workflows.py
apps/api/src/db/: client.py
apps/api/src/routes/: health.py
apps/api/tests/: __init__.py  test_db_client.py  test_dependencies.py  test_health.py  test_tenant.py
apps/cli/: pyproject.toml
apps/cli/src/cawnex_cli/: __init__.py  config.py  main.py
apps/cli/src/cawnex_cli/commands/: agents.py  init.py  issue.py  issues.py  project.py  run.py  setup.py  status.py  watch.py
apps/ios/Cawnex/Cawnex/: CawnexApp.swift  ContentView.swift
apps/ios/Cawnex/Cawnex.xcodeproj/: project.pbxproj
apps/ios/Cawnex/Cawnex/App/: AppStore.swift  ServiceFactory.swift
apps/ios/Cawnex/Cawnex/Components/: BudgetBar.swift  CawnexNavBar.swift  CawnexTabBar.swift  ChatInputBar.swift  ChatMessageBubble.swift  DocPreviewBanner.swift  DocumentPreviewSheet.swift  MVICard.swift  PipelineBar.swift  StatusChip.swift
apps/ios/Cawnex/CawnexTests/: CawnexTests.swift
apps/ios/Cawnex/CawnexUITests/: CawnexUITests.swift  CawnexUITestsLaunchTests.swift
apps/ios/Cawnex/configs/: Development.xcconfig  Production.xcconfig  Shared.xcconfig
apps/web/: index.html  package.json  pnpm-lock.yaml
apps/web/src/: index.css  main.tsx
apps/web/src/components/: Layout.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: ProjectList.tsx  ProjectVision.tsx  Roost.tsx
apps/web/src/roost/: Crows.tsx  Issues.tsx  Milestones.tsx  VisionChat.tsx
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/cawnex_worker/: __init__.py  git_workflow.py  murder.py
apps/worker/src/cawnex_worker/crows/: runner.py  subscription_runner.py
apps/worker/src/cawnex_worker/tools/: __init__.py  shell.py
design/: cawnex.pen
design/ios/: README.md
docs/: API-MONARCH-CHAT.md  ARCHITECTURE-V2.md  ARCHITECTURE.md  CI-CD-INTEGRATION.md  CLAUDE-SDK.md  DEPLOYMENT-PROCESS.md  DEPLOYMENT-WORKAROUND.md  DOMAIN-SETUP.md  ENHANCEMENT-BACKLOG.md  POC-PLAN.md  POC6-PLAN.md  README.md  REPORT-FIXES.md  STRICT-CODING-STANDARDS.md  TWO-STACK-DEPLOYMENT.md  VIRTUAL-ENVIRONMENT-BEST-PRACTICES.md  VISION.md
docs/design/: abstraction.md  agents.md  architecture.md  byol.md  onboarding.md  orchestration.md  platform.md  saas-model.md  screen-specs.md
docs/research/: architecture-reverse.md  gaps-and-questions.md  patterns-and-lessons.md  slides-catalog.md  transcript-analysis.md
docs/roadmap/: auth-cognito-mfa-multitenant.md  milestone-0-the-egg.md  mvp-scope.md  phases.md
infra/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: cawnex-auth-stack.ts  cawnex-domain-cloudflare-stack.ts  cawnex-domain-stack.ts  cawnex-stack.ts  poc1-crow-stack.ts  poc3-murder-stack.ts  poc5-async-stack.ts  poc6-worker-stack.ts
infra/lib/poc/: poc3-murder-stack.ts  poc5-async-stack.ts  poc6-worker-stack.ts
lambdas/auth-post-confirmation/: handler.py
lambdas/murder/: pyproject.toml
lambdas/murder/src/murder/: __init__.py  blackboard.py  config.py  contracts.py  cost.py  enums.py  events.py  keys.py  models.py  stream.py
lambdas/murder/tests/: conftest.py  test_blackboard.py  test_contracts.py  test_cost.py  test_enums.py  test_events.py  test_models.py
lambdas/poc1-crow/: handler.py  requirements.txt
lambdas/poc3-murder/: handler.py
lambdas/poc5-api/: handler.py
lambdas/poc5-murder/: build.sh  handler.py
lambdas/poc6-worker/: Dockerfile  handler.py  requirements.txt
lambdas/worker/: pyproject.toml
lambdas/worker/src/worker/: __init__.py  blackboard.py  config.py  contracts.py  cost.py  enums.py  events.py  github.py  logging.py  models.py  parsing.py
lambdas/worker/tests/: conftest.py  test_blackboard.py  test_contracts.py  test_cost.py  test_events.py  test_logging.py  test_models.py  test_parsing.py
mcp-monarch/: .env.example  CLAUDE-DESKTOP.md  QUICK-START.md  README.md  SETUP.md  claude-desktop-config.json  demo_launcher.py  launcher.py  requirements.txt  setup-claude.py  simple_launcher.py  start.sh  test_imports.py  test_launcher.py  test_mcp.py  test_mcp_simple.py  test_monarch_simple.py  test_poc.py  test_simple.py
mcp-monarch/src/: agent_deployer.py  monarch.py  telegram_bot.py
scripts/: add-api-auth.sh  bootstrap.py  init_db.py  local-worker.py  monitor-pipeline.sh  quality-control.sh  seed.py  setup-domain-cloudflare.sh  setup-domain.sh  setup-post-confirmation-trigger.sh  update-ios-config.sh  verify-domain-setup.sh
(+131 files in other folders)
