[project]
name = "cawnex"
version = "0.1.0"
description = "Coordinated intelligence. Multi-agent orchestration platform."
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "alembic>=1.18.4",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/providers",
    "packages/git_ops",
    "apps/api",
    "apps/worker",
    "apps/cli",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
