[project]
name = "cawnex-api"
version = "0.1.0"
description = "Cawnex API — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "cawnex-core",
    "cawnex-providers",
    "cawnex-git-ops",
]

[tool.uv.sources]
cawnex-core = { workspace = true }
cawnex-providers = { workspace = true }
cawnex-git-ops = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cawnex_api"]
