[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cawnex-api"
version = "0.1.0"
description = "Cawnex API - FastAPI backend with strict typing"
authors = [{name = "Eduardo Augusto", email = "eduardo@cawnex.ai"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "mangum>=0.19.0,<1.0",
    "boto3>=1.35.0,<2.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-type-checking>=2.7.0",
    "flake8-docstrings>=1.7.0",
    "bandit>=1.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

# ================================
# MYPY - ULTRA STRICT TYPE CHECKING
# ================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
strict_concatenate = true
strict_equality = true
strict_optional = true
extra_checks = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool", 
    "ignore-without-code",
    "unused-awaitable",
]

[[tool.mypy.overrides]]
module = "mangum.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

# ================================
# BLACK - CODE FORMATTING
# ================================
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ================================
# ISORT - IMPORT SORTING
# ================================ 
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ================================
# PYTEST - TESTING
# ================================
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ================================
# BANDIT - SECURITY LINTING
# ================================
[tool.bandit]
exclude_dirs = ["tests", "dist", "build"]
skips = ["B101"]  # Allow assert in tests

# ================================
# COVERAGE - CODE COVERAGE
# ================================
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/tests/*",
    "test_*",
    "*_test.py",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]